fix header text overflow bug, align header items center
related #116

--- a/css/_custom.css
+++ b/css/_custom.css
@@ -60,6 +60,8 @@
  .mxhi10-l { max-height: 128rem; }
 }
 
+/* Min Height */
+.mihi-2 { min-height: 2rem; }
 
 
 
